# fixedfloat

./: .env  .gitignore  Cargo.toml  JUSTFILE  config.yml  docker-compose.yml
.cargo/: config.toml
src/: config.rs  configuration.rs  error.rs  lib.rs  main.rs  startup.rs
src/clients/: mod.rs
src/clients/fixedfloat/: client.rs  client_config.rs  mod.rs  models.rs
src/log/: mod.rs
src/model/: base.rs  mod.rs  task.rs  user.rs
src/utils/: mod.rs
src/web/: error.rs  mod.rs  models.rs  routes_fixedfloat.rs
src/web/routes/: mod.rs  utils.rs
src/web/routes/fixedfloat/: mod.rs  supported_currencies.rs
web-folder/: index.html  index.js  styles.css
