[package]
name = "fixedfloat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fixedfloat"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["json", "macros"] }
config = "0.13.3"
serde = "1.0.188"
sqlx = { version = "0.7.1", features = ["postgres"] }
tokio = { version = "1.32.0", features = ["full"] }
