[package]
name = "fixedfloat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "fixedfloat"

[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = { version = "0.6", features = ["macros"] }
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# -- Tracing
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
# -- Others
uuid = { version = "1", features = ["v4", "fast-rng"] }
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"
sqlx = { version = "0.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "time",
] }
sqlb = "0.3.8"
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.7"
base64-url = "2.0.0"
time = "0.3.28"
anyhow = "1"
reqwest = "0.11.20"
openssl = "0.10.57"
hex = "0.4.3"
qrcode = "0.12.0"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2.0.0"
